Revision history for Perl module Prima

1.77 2025-XX-XX
 - Hint colors can be set for each widget individually
 - Add JXL support
 - Add MenuItem.context for generic use

1.76 2025-03-12
 - Implement gt::Grid geometry emulating Tk::grid
 - 'run Prima' is no more, Prima->run it is now (because `use v5.36` ruins it)

1.75 2024-12-21
 - FrameSet: rename .arrangement to .vertical, remove .resizeMethod
 - add Date,Time,KeySelector,FrameSet, and CheckList to VB
 - s/dragable/draggable/g
 - Grouped menu items use a distinct radio style check mark bitmap
 - Support CPAL/COLR colored fonts
 - Add the PopupButton class

1.74 2024-08-24
 - implement antialiased polygon fill in C, use it in the
   AA emulation in Prima::Drawable::Antialias instead of the old algorithm
 - all AA plotting is supported internally, Prima::Drawable::Antialias is
   not used for the emulated AA drawing
 - add kb:: definitions for the internet keyboards
 - fixes for Strawberry Perl 5.40

1.73 2024-05-07
 - add Prima::Image::Exif, support jpeg tags
 - better compatibility for text rendering outside paint
 - add examples/text-render.pl, inspired by hb_view

1.72 2024-01-31
 - Major rehaul of ROP constants with API compatibility break:
   -- rop(R), put_image(X,Y,I) will not use rop R but rop::Default instead
   -- rop::Blend and rop::CopyPut are no longer equal. rop::XorPut and rop::Xor
      are no longer equal; the latter is rop::XorOver now.
 - Image.text_out() works outside the paint mode by querying glyph bitmaps.
      Other text- and font- related method work too.
 - Pod parsing and rendering moved to Prima::Drawable::Pod
   -- added utils/pod2pdf that works without needing a X11 server
 - Font.underlinePosition and Font.underlineThickness are added
 - Image.has_codec added
 - Prima::Image::Loader and per-frame image loading and saving is added
 - Utils.sound is removed

1.71 2023-10-29
 - Add Prima::Image::webp filter dialog
 - Add DeviceBitmap.maskPixel
 - Add menus to file dialogs